--- a/.gitignore
+++ b/.gitignore
@@ -396,4 +396,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-!ConsoleApp1/bin/Release/net7.0/ConsoleApp1.exe
+!ConsoleApp1/bin/Release/net7.0
