--- a/.github/workflows/update_file_list.yml
+++ b/.github/workflows/update_file_list.yml
@@ -13,16 +13,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Setup MSVC
-      run: |
-        choco install visualstudio2019community --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --quiet --wait"
-        choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --quiet --wait"
-      shell: cmd
-
     - name: Run C++ program
-      run: |
-        "D:\Winui3App\Winui3App\.github\workflows/DefineListOfPush.exe"
-      shell: cmd
+  	run: |
+    	"D:\chemin\vers\votre\executable\DefineListOfPush.exe"
+  	shell: cmd
+
 
     - name: Commit and push changes
       run: |
